Changed back to old logo for now

--- a/uoyths.dtx
+++ b/uoyths.dtx
@@ -605,7 +605,7 @@
 			\begin{flushright}
 				\rule{.63\linewidth}{0.8mm}\\[0mm]
                 \iftp@logo
-                    \epsfig{file=uoyths_logo_new.eps,width=.63\linewidth}
+                    \epsfig{file=uoyths_logo.eps,width=.63\linewidth}
                 \else
                     \textsc{}\\[1mm]
                     {\othertitlefont Department of Electronics}\\[1mm]
